sonar-server/src/main/webapp/stylesheets/style.css
/* ... */
div.barchart > div {
  background-color: #4B9FD5;
  height: 0.9em;
}

table.matrix thead {
  background-color: #CAE3F2;
  border: 1px solid #4b9fd5;
}

table.matrix thead th {
  text-align: right;
  border-right: 1px solid #4b9fd5;
  padding: 4px 5px;
}

table.matrix tbody td {
  border: 1px solid #ddd;
  margin: 0;
  padding: 4px 5px;
}

table.matrix tbody td.title {
  border: none;
  font-weight: bold;
  margin: 0;
  padding: 5px 0 0 5px;
}

a.nolink, .dashbox a, .dashbox a:visited {
  text-decoration: none;
}

a.nolink:hover, .dashbox a:hover, .dashbox a.action, .dashbox a.action:visited {
  text-decoration: underline;
}

h1 strong, .dashbox .title, .gwt-SourcePanel .sources .msg li strong {
  font-weight: bold;
}

h4 a, h4 a:visited, .gray, table.data tfoot a, table.data tfoot a:visited {
  color: #777;
}

.even, table.sortable tr.rowodd {
  background-color: #EFEFEF;
}

.bordered, table.data > thead {
  border-bottom: 1px solid #ddd;
}

table.data > tbody {
  border-bottom: 1px solid #ddd;
  border-right: 1px solid #ddd;
  border-left: 1px solid #ddd;
}

table.data, table.spaced, .gwt-SourcePanel .sources {
  width: 100%;
}

table.data td.barchart {
  width: 100px;
}

table.without-header {
  border-top: 1px solid #ddd;
}

.hoverable.selected a {
  color: #fff;
}

.gwt-SourcePanel .sources td {
  vertical-align: top;
}

/* GENERIC STYLES */
.line-block {
  display: block;
  width: 100%;
  height: 24px;
  line-height: 24px;
  margin-bottom: 5px;
}

.line-info {
  background: url('../images/information.png') no-repeat scroll left 50% transparent;
  padding-left: 18px
}

div.break10 {
  height: 10px;
}

div.break30 {
  height: 30px;
}

.marginbottom10 {
  margin-bottom: 10px;
}

.marginbottom5 {
  margin-bottom: 5px;
}

.marginright10 {
  margin-right: 10px;
}

.marginleft10 {
  margin-left: 10px;
}

.width100 {
  width: 100%;
}

ul.horizontal {
  list-style-type: none;
}

ul.horizontal li {
  float: left;
  position: relative;
}

table.nowrap td, td.nowrap, th.nowrap {
  white-space: nowrap;
}

.background-gray {
  background-color: #EFEFEF;
  color: #444;
}

/* CONFIGURATION OF Q PROFILES */
.bulk-edit {
  display: block;
  background: url("../images/bulk-edit.png") no-repeat scroll left 50% transparent;
  padding: 2px 0 2px 20px;
}

.csv {
  display: block;
  background: url("../images/csv.png") no-repeat scroll left 50% transparent;
  padding: 2px 0 2px 20px;
}

.add {
  display: block;
  background: url("../images/add.png") no-repeat scroll left 50% transparent;
  padding: 2px 0 2px 20px;
}

.restore {
  display: block;
  background: url("../images/restore.gif") no-repeat scroll left 50% transparent;
  padding: 2px 0 2px 20px;
}

.compare {
  display: block;
  background: url("../images/compare.png") no-repeat scroll left 50% transparent;
  padding: 2px 0 2px 20px;
}

/* Profile diff */
.diffParam {
  font-family: 'Bitstream Vera Sans Mono', 'Courier', monospace;
}

.yellowHighlight {
  background: #FFFBCC;
}

/* Used on links which are located inside a dense text place or in tables */
/* in order to rapidly identify them                                      */
.link-action {
  text-decoration: underline !important;
  color: #4183C4 !important;
}

.link-red {
  color: #990000 !important;
}

.link-more {
  background-image: url('../images/bullet_arrow_down.png');
  background-repeat: no-repeat;
  padding-right: 20px;
  background-position: right center;
  cursor: pointer;
}

.dropdown {
  cursor: pointer;
  display: inline-block;
  text-decoration: none !important;
}

.dropdown-menu {
  background-clip: padding-box;
  background-color: #FFFFFF;
  border-color: #DDD;
  border-style: solid;
  border-width: 1px;
  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
  float: left;
  margin: 0;
  max-width: 220px;
  min-width: 160px;
  padding: 0;
  position: absolute;
  z-index: 1000;
}

.dropdown-menu h2 {
  padding: 0 8px;
  font-size: 100%;
  font-weight: bold;
}

.dropdown-menu li {
  list-style-type: none !important;
  line-height: 24px;
  height: 24px;
  padding: 0 8px;
  cursor: pointer !important;
  float: none !important;
}

.dropdown-menu li:hover {
  background-color: #4b9fd5 !important;
}

.dropdown-menu li:hover a {
  color: #fff !important;
}

.dropdown-menu a {
  text-decoration: none !important;
}

.form-key-cell {
  padding: 2px 8px 4px 10px;
  text-align: right;
  width: 1%;
  white-space: nowrap;
  vertical-align: top;
}

.form-val-cell {
  padding: 2px 8px 4px 0;
  text-align: left;
  white-space: normal;
}

.form-val-cell li {
  margin-bottom: 5px;
}

.form-val-note {
  color: #999;
}

blockquote {
  border-left: 3px solid #E5E5E5;
  padding: 0 8px;
  line-height: 16px;
}

blockquote cite {
  line-height: 16px;
  background-image: url('../images/reviews/comment.png');
  background-repeat: no-repeat;
  padding-left: 20px;
  background-position: left center;
  font-size: 12px;
  color: #888;
}

.spacer-left {
  margin-left: 8px;
}

.spacer-right {
  margin-right: 8px;
}

.spacer-bottom {
  margin-bottom: 8px;
}

.spacer-top {
  margin-top: 8px;
}

td.spacer-left {
  padding-left: 8px;
}

td.spacer-right {
  padding-right: 8px;
}

td.spacer-bottom {
  padding-bottom: 8px;
}

td.spacer-top {
  padding-top: 8px;
}

.bordered {
  border: 1px solid #DDD;
}

.bordered-left {
  border-left: 1px solid #DDD;
}

.bordered-right {
  border-right: 1px solid #DDD;
}

.bordered-bottom {
  border-bottom: 1px solid #DDD;
}

.bordered-top {
  border-top: 1px solid #DDD;
}

.table > thead > tr > th {
  border-top: 0 none;
  font-weight: bold;
  vertical-align: bottom;
  line-height: 16px;
  padding: 4px 5px;
  vertical-align: bottom;
}

.table > tbody > tr > td {
  line-height: 16px;
  padding: 4px 5px;
  vertical-align: middle;
}

.table > tfoot > tr > td {
  font-size: 93%;
  color: #777;
  padding: 4px 5px;
}

.table-bordered > tbody {
  border-left: 1px solid #DDD;
  border-right: 1px solid #DDD;
  border-bottom: 1px solid #DDD;
}
/* ... */

